added header and nav and banner

--- a/mi-porfolio.html
+++ b/mi-porfolio.html
@@ -7,7 +7,26 @@
   <link rel="stylesheet" href="mi-porfolio.css">
 </head>
 <body>
-  
+  <!--Created my header and added my nav bar here-->
+  <header>
+    <h1>Jasiel</h1>
+    <!--Added nav bar to have the differnt options to be clicked on-->
+    <nav>
+      <a href="#aboutme">About Me</a>
+      <a href="#work">Work</a>
+      <a href="#contactme">Contact Me</a>
+    </nav>
+  </header>
+
+  <!--Added this div here to have my banner on my website-->
+  <div class="banner"> 
+    <img src="Worried-about-coding.jpg">
+  </div>
+
+  <section id="aboutme">
+    
+
+  </section>
   
 </body>
 </html>
