added media queries

--- a/mi-porfolio.html
+++ b/mi-porfolio.html
@@ -22,6 +22,7 @@
   <div class="banner"> 
     <img src="Worried-about-coding.jpg">
   </div>
+<main>
 
   <section id="aboutme">
     <h1>About Me</h1>
@@ -71,6 +72,9 @@
    
 
 </section>
+
+</main>
+  
   <footer>
     Thanks for Visiting!
   </footer>
