updated Read Me

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <section id="work" class="test">
       <h1>Work</h1>
       <!--Here I added my link to my website and img into a div so I can style it in CSS later -->
+      <!--Here I added my title for each of the projects and the screen shoots to show what they are
+      added the link take you to my actual project-->
      <div class="test2">
       <div class="project1">
         <a href="file:///Users/jasielgonzalez/bootcamp/challange1/index.html"><img
@@ -53,7 +55,8 @@
       </div>
 
 
-
+      <!--Here I added my title for each of the projects and the screen shoots to show what they are
+      added the link take you to my actual project-->
       <div class="project2">
         <a href="file:///Users/jasielgonzalez/bootcamp/prework-study-guide/index.html"><img
             src="Screenshot 2024-01-09 at 3.07.06 PM.png" alt=""></a>
@@ -63,7 +66,8 @@
       </div>
 
 
-
+<!--Here I added my title for each of the projects and the screen shoots to show what they are
+      added the link take you to my actual project-->
       <div class="project3">
         <a href="file:///Users/jasielgonzalez/bootcamp/mini-project/index.html"><img
             src="Screenshot 2024-01-09 at 3.07.44 PM.png" alt=""></a>
@@ -73,7 +77,7 @@
       </div>
      </div> 
     </section>
-
+ 
     <section class="test" id="contactme">
       <h1>Contact Me</h1>
       <a class="project1" href="https://github.com/JasielAaron"> Github</a>
@@ -86,7 +90,7 @@
 
       </section>
 
-
+      <!--Again greatly appreciate the TA he helped me line up my page and help me understand a little more!-->
 
 
   </main>
